--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
   </head>
   <body>
     <div class="topnav">
-        <a href="">Add</a>
-        <a href="">Filter</a> 
+        <a href="add.html">Add</a>
       </div>
+      <h1>List of video games</h1>
+
+      <button>remove</button>
+
+      
 
 
 
