--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="topnav">
-        <a href="add.html">Add</a>
-      </div>
-      <h1>List of video games</h1>
-
-      <button>remove</button>
+    <form id="form" >
+      <input  id ="name" type="text" placeholder="name">
+      <input id="category" type="text" placeholder="category">
+      <input id="developors" type="text" placeholder="developors">
+      <input id="date" type="text" placeholder="release date">
+      <input id="image" type="text" placeholder="image">
+      <input id="price" type="text" placeholder="price">
 
       
 
+      <button onclick="add()">add</button>
+  </form>
+    <div class="topnav">
+        <p class="all" onclick="show()">Add game</p>
+      </div>
+      <h1 class="all">List of video games</h1>
 
-
-
-
-
-
-
-
-
-
+     <div id="hi"></div>
     <script
       src="https://code.jquery.com/jquery-3.7.1.js"
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
